<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notebook</string>
    
    <!-- Auth Screen -->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    
    <!-- Main Screen -->
    <string name="my_notes">My Notes</string>
    <string name="sign_out">Sign Out</string>
    <string name="premium_user">Premium User</string>
    <string name="free_user">Free User</string>
    <string name="add_note">Add Note</string>
    <string name="no_notes">No notes yet. Create your first note!</string>
    <string name="search_notes">Search notes…</string>
    
    <!-- Note Detail Screen -->
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="attach_file">Attach File</string>
    <string name="attachments">Attachments</string>
    <string name="no_attachments">No attachments</string>
    <string name="pick_file">Pick File</string>
    <string name="uploading">Uploading…</string>
    <string name="download">Download</string>
    <string name="remove">Remove</string>
    
    <!-- Messages -->
    <string name="error_occurred">An error occurred</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="file_deleted">File deleted</string>
    <string name="confirm_delete_note">Are you sure you want to delete this note?</string>
    <string name="confirm_delete_file">Are you sure you want to delete this file?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>
    
    <!-- Errors -->
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password must be at least 6 characters</string>
    <string name="error_fields_required">All fields are required</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_authentication">Authentication failed</string>
</resources>


